Fix button spacing at <480px screen size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4187,7 +4187,7 @@ input, select, textarea {
 			input[type="reset"],
 			input[type="button"],
 			.button {
-				padding: 0;
+				margin: 0 0 0.8em 0;
 			}
 
 		/* Main */
